# petanque-team-abandoned

./: CMakeLists.txt  README.md  TODO.txt  main.cpp
cpp/: Backend.cpp  Backend.h  Initializer.cpp  Initializer.h  Login.cpp  Login.h  Memory.cpp  Memory.h
cpp/objects/: Event.cpp  Event.h  Match.cpp  Match.h  MatchDublets.cpp  MatchDublets.h  MatchSelection.cpp  MatchSelection.h  MatchSingiels.cpp  MatchSingiels.h  MatchTeam.cpp  MatchTeam.h  MatchTriplets.cpp  MatchTriplets.h  MatchTypes.cpp  MatchTypes.h  Player.cpp  Player.h  Team.cpp  Team.h
cpp/objects/MatchType/: MatchDublets.cpp  MatchDublets.h  MatchSingiels.cpp  MatchSingiels.h  MatchTriplets.cpp  MatchTriplets.h  MatchTypeBase.cpp  MatchTypeBase.h
cpp/objects/MatchType/MatchData/: MatchPoints.cpp  MatchPoints.h  Selection.cpp  Selection.h
cpp/storages/: Database.cpp  Database.h  DefaultPersonalizationData.cpp  DefaultPersonalizationData.h  Memory.cpp  Memory.h  Personalization.cpp  Personalization.h
cpp/support/: Log.cpp  Log.h  LogQML.cpp  LogQML.h
personalizationData-backup/: personalization.json
qml/: ApplicationIsAlreadyRunning.qml  Login.qml  LoginForm.qml  Main.qml  Play.qml
qml/delegates/: PlayerDelegate.qml  TeamDelegate.qml
qml/event/: Configure.qml  Continue.qml  Finish.qml  Start.qml
qml/event/Configure/: Event.qml  Player.qml  PlayerDelegate.qml  Team.qml  TeamDelegate.qml
qml/event/Configure/Event/: InfoField.qml  TeamsList.qml
qml/event/Continue/: Dublets.qml  DubletsMatch.qml  DubletsSelection.qml  MatchSummary.qml  Selection.qml  SelectionTemplate.qml  Singiels.qml  SingielsMatch.qml  SingielsSelection.qml  Triplets.qml  TripletsMatch.qml  TripletsSelection.qml
qml/event/Continue/Match/: GroupsMatch.qml  MatchTemplate.qml  TeamsMatch.qml
qml/event/Continue/Selection/: DubletsGroupSelection.qml  GroupSelection.qml  SelectionTemplate.qml  SingielsGroupSelection.qml  TripletsGroupSelection.qml
qml/event/Start/: AddPlayer.qml  AddTeam.qml  StartEvent.qml
